--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,14 @@
         </dependency>
 
         <dependency>
+            <groupId>net.catrainbow.nocheatplus</groupId>
+            <artifactId>NCPStaticBar</artifactId>
+            <version>1.0.0</version>
+            <scope>system</scope>
+            <systemPath>C:/Users/dell/Desktop/FAP 3/plugins/NCPStaticBar-1.0.0.jar</systemPath>
+        </dependency>
+
+        <dependency>
             <groupId>mm.him188</groupId>
             <artifactId>GUI</artifactId>
             <version>1.0.0</version>
