--- a/theme/default.yml
+++ b/theme/default.yml
@@ -76,3 +76,9 @@ language:
     title: Suspicious Player
     content: NCP will show you recent player who are seemed to be hack
     button: §8@tick before @level §r@player@next§8Type:@reason Info:@info
+
+# Staff List(player who can use admin command)
+helper:
+  enabled: true
+  list:
+    - PlayerName
